# rompot-schedio

./: .buildinfo  .copier-config.yaml  .copier-hyfi-config.yaml  .copierignore  .envrc  .gitignore  .tasks-extra.toml  .tasks.toml  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  README.md  api.html  codecov.yml  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.docker/: Dockerfile.app  Dockerfile.base  docker-compose.app.yaml  docker-compose.yaml  docker.app.env  docker.common.env  docker.env
.docker/.ids/: admin.env
.docker/scripts/: requirements-base.txt
.github/workflows/: deploy-app-image.yaml  deploy-base-image.yaml  deploy-docs.yaml  lint_and_test.yaml
_autosummary/: schedio.conf.html  schedio.html  schedio.tasks.html
_modules/: index.html
_modules/schedio/: __cli__.html  __init__.html
_sources/: api.rst  examples.md  index.md
_sources/_autosummary/: schedio.conf.rst  schedio.rst  schedio.tasks.rst
book/: _config.yml  index.md  requirements.txt
requirements/: requirements.txt
src/: requirements.txt
src/forger/core/: curve.py
src/forger/experimental/autoenc/: ae_conv.py  base.py  factory.py
src/forger/metrics/: color_metric.py  geom_metric.py  get_ws_main.py  metric_main.py  util.py
src/forger/train/: losses.py  positional.py  run_util.py  stitching.py  train_stroke_autoencoder.py
src/forger/ui/: brush.py  library.py  mapper.py  run.py  util.py
src/forger/util/: clip_util.py  color.py  img_proc.py  logging.py  spline_dist.py  torch_data.py
src/forger/viz/: bundled.py  paint_image_main.py  style_transfer.py  visualize.py  visualize_main.py  visualize_pca_main.py  visualize_stitching_main.py
src/models/forger/experimental/autoenc/: ae_conv.py  factory.py  simple_autoencoder.py
src/models/forger/metrics/: geom_metric.py  get_ws_main.py
src/models/forger/train/: train_stroke_autoencoder.py
src/models/forger/ui/: brush.py  mapper.py
src/models/forger/util/: color.py  torch_data.py
src/models/forger/viz/: visualize.py  visualize_main.py  visualize_pca_main.py
src/models/stylegan2_ada_pytorch/: __init__.py  projector_orig.py  train.py  train_orig.py
src/models/stylegan2_ada_pytorch/experiment/latent_exploration/: seed_expand.py
src/models/stylegan2_ada_pytorch/metrics/: perceptual_path_length.py
src/models/stylegan2_ada_pytorch/torch_utils/: misc.py
src/models/stylegan2_ada_pytorch/torch_utils/ops/: conv2d_gradfix.py
src/models/stylegan2_ada_pytorch/training/: dataset.py  loss_modified.py  loss_util.py
src/schedio/: __cli__.py
src/schedio/conf/about/: __init__.yaml  schedio.yaml
src/schedio/conf/forger/: stylize.yaml
src/schedio/conf/task/: forger_stylize.yaml
src/schedio/forger/core/: curve.py
src/schedio/forger/experimental/autoenc/: ae_conv.py  factory.py  simple_autoencoder.py
src/schedio/forger/metrics/: color_metric.py  geom_metric.py  get_ws_main.py  metric_main.py  util.py
src/schedio/forger/train/: losses.py  positional.py  run_util.py  stitching.py  train_stroke_autoencoder.py
src/schedio/forger/ui/: brush.py  library.py  mapper.py  run.py  util.py
src/schedio/forger/util/: clip_util.py  color.py  img_proc.py  torch_data.py
src/schedio/forger/viz/: paint_image_main.py  visualize.py  visualize_main.py  visualize_pca_main.py  visualize_stitching_main.py
src/schedio/tasks/forger/: __init__.py  config.py
src/schedio_models/forger/experimental/autoenc/: ae_conv.py  factory.py  simple_autoencoder.py
src/schedio_models/forger/metrics/: color_metric.py  geom_metric.py  get_ws_main.py  metric_main.py  util.py
src/schedio_models/forger/train/: losses.py  positional.py  run_util.py  stitching.py  train_stroke_autoencoder.py
src/schedio_models/forger/ui/: brush.py  library.py  mapper.py  run.py  util.py
src/schedio_models/forger/util/: clip_util.py  color.py  img_proc.py  torch_data.py
src/schedio_models/forger/viz/: paint_image_main.py  visualize.py  visualize_main.py  visualize_pca_main.py  visualize_stitching_main.py
src/schedio_models/stylegan2_ada_pytorch/: generate.py  projector_orig.py  style_interpolation.py  train.py
src/schedio_models/stylegan2_ada_pytorch/experiment/latent_exploration/: seed_expand.py
src/schedio_models/stylegan2_ada_pytorch/experiment/util/: latent.py
src/schedio_models/stylegan2_ada_pytorch/metrics/: frechet_inception_distance.py  kernel_inception_distance.py  metric_utils.py
src/schedio_models/stylegan2_ada_pytorch/torch_utils/ops/: bias_act.py  grid_sample_gradfix.py  upfirdn2d.py
src/schedio_models/stylegan2_ada_pytorch/training/: networks.py  networks_modified.py  training_loop_modified.py
tests/notebook/: schedio.ipynb  tests.ipynb
tests/schedio/: test_cli.py  test_init.py
tests/schedio/tasks/: test_forger_stylize.py
